--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
   
   <div class="vg-main-wrapper">
-    <div class="vg-page page-home" id="home" style="background-image: url(/assets/img/bg_image_2.jpg);">
+    <div class="vg-page page-home" id="home" style="background-image: url(assets/img/bg_image_2.jpg);">
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Konnichiwa</h1>
         <h2 class="fw-medium fg-theme">I'm Roscoe Kollin</h2>
@@ -238,99 +238,99 @@
 
         <div class="gridder my-3">
           <div class="grid-item apps wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-1.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-1.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-1.png" alt="">
             </div>
           </div>
           <div class="grid-item template wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics1.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics1.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics1.jpg" alt="">
             </div>
           </div>
           <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics2.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics2.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics2.jpg" alt="">
             </div>
           </div>
           <div class="grid-item apps ui-ux wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-2.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-2.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-2.png" alt="">
             </div>
           </div>
           <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics3.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics3.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics3.jpg" alt="">
             </div>
           </div>
           <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-3.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-3.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-3.png" alt="">
             </div>
           </div>
           <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-4.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-4.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-4.png" alt="">
             </div>
           </div>
             <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-5.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> "> 
+            <div class="img-place" data-src="assets/img/work/wp-work-5.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> "> 
               <img src="../assets/img/work/wp-work-5.png" alt="">
             </div>
           </div>
             <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-6.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-6.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-6.png" alt="">
             </div>
           </div>
            
 
             <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-7.png" data-fancybox data-caption="<h5 class='fg-theme'></h5>">
+            <div class="img-place" data-src="assets/img/work/wp-work-7.png" data-fancybox data-caption="<h5 class='fg-theme'></h5>">
               <img src="../assets/img/work/wp-work-7.png" alt="">
             </div>
           </div>
           <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics4.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics4.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics4.jpg" alt="">
             </div>
           </div>
 
  <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-8.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-8.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-8.png" alt="">
             </div>
           </div>
 
            <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-9.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> </p>">
+            <div class="img-place" data-src="assets/img/work/wp-work-9.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> </p>">
               <img src="../assets/img/work/wp-work-9.png" alt="">
             </div>
           </div>
 
  <div class="grid-item apps ui-ux wireframes wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/wp-work-10.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/wp-work-10.png" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/wp-work-10.png" alt="">
             </div>
           </div>
 
 
 <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics5.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics5.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics5.jpg" alt="">
             </div>
           </div>
 <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics6.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics6.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics6.jpg" alt="">
             </div>
           </div>
           <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics7.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics7.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics7.jpg" alt="">
             </div>
           </div>
 <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="/assets/img/work/graphics8.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="assets/img/work/graphics8.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="../assets/img/work/graphics8.jpg" alt="">
             </div>
           </div>
