--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
           </div>
           <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="assets/img/work/graphics2.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="graphics2.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="graphics2.jpg" alt="">
             </div>
           </div>
@@ -258,7 +258,7 @@
             </div>
           </div>
           <div class="grid-item template ios wow zoomIn">
-            <div class="img-place" data-src="work/graphics3.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
+            <div class="img-place" data-src="graphics3.jpg" data-fancybox data-caption="<h5 class='fg-theme'></h5> ">
               <img src="graphics3.jpg" alt="">
             </div>
           </div>
