--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="brand">
       <img src="../assets/favicon.ico" alt="" width="30" height="30">
     </div>
-    <h3 class="ml-1">Gram</h3>
+    <h3 class="ml-1">Portfolio</h3>
     <button class="btn-fab toggle-menu mr-3"><span class="ti-menu"></span></button>
   </div>
   
@@ -87,7 +87,7 @@
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Konnichiwa</h1>
         <h2 class="fw-medium fg-theme">I'm Roscoe Kollin</h2>
-        <p class="tagline">UI/UX Web Development and Digital Marketing</p>
+        <p class="tagline">JLPT N2 Certified, IT Web Development, Google Data Analytics Certified, Digital Marketing, Python</p>
       </div>
     </div>
     
