--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <div class="col-md-6">
             <div class="caption wow fadeInRight">
               <h2 class="fg-dark">Roscoe Kollin</h2>
+              <p class="fg-theme fw-medium">JLPT N2 Certified, IT Web Development</p>
               <p class="fg-theme fw-medium">JLPT N2 Certified, IT Web Development, Google Data Analytics Certified, Digital Marketing, Python</p>
               <p>As a digital marketing and IT professional with 7 years of experience in marketing and 2 years of experience in web development, I bring a unique skill set to the table. With a proven track record in social media management, SEO, content creation, and graphic design using tools like Photoshop and Illustrator, I have successfully helped businesses build their online presence, increase brand awareness, and drive traffic to their websites.</p>
               <ul class="theme-list">
