--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Konnichiwa</h1>
         <h2 class="fw-medium fg-theme">I'm Roscoe Kollin</h2>
+        <p class="tagline">JLPT N2 Certified, IT Web Development</p>
         <p class="tagline">JLPT N2 Certified, IT Web Development, Google Data Analytics Certified, Digital Marketing, Python</p>
       </div>
     </div>
