--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Konnichiwa</h1>
         <h2 class="fw-medium fg-theme">I'm Roscoe Kollin</h2>
-        <p class="tagline">JLPT N2 Certified, IT Web Development</p>
         <p class="tagline">JLPT N2 Certified, IT Web Development, Google Data Analytics Certified, Digital Marketing, Python</p>
       </div>
     </div>
@@ -105,13 +104,12 @@
           <div class="col-md-6">
             <div class="caption wow fadeInRight">
               <h2 class="fg-dark">Roscoe Kollin</h2>
-              <p class="fg-theme fw-medium">JLPT N2 Certified, IT Web Development</p>
               <p class="fg-theme fw-medium">JLPT N2 Certified, IT Web Development, Google Data Analytics Certified, Digital Marketing, Python</p>
               <p>As a digital marketing and IT professional with 7 years of experience in marketing and 2 years of experience in web development, I bring a unique skill set to the table. With a proven track record in social media management, SEO, content creation, and graphic design using tools like Photoshop and Illustrator, I have successfully helped businesses build their online presence, increase brand awareness, and drive traffic to their websites.</p>
               <ul class="theme-list">
                 <li class="fg-dark"><b>From:</b> Baguio City, Philippines</li>
                 <li class="fg-dark"><b>Lives In:</b> Tokyo, Japan</li>
-                <li class="fg-dark"><b>Languages:</b> Native Tagalog, Native level English, Business Level Japanese</li>
+                <li class="fg-dark"><b>Languages:</b> Native Tagalog, Native level English, JLPT N2 Certified</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
               </ul>
             </div>
