--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="caption wow fadeInRight">
               <h2 class="fg-dark">Roscoe Kollin</h2>
               <p class="fg-theme fw-medium">JLPT N2 Certified, IT Web Development, Google Data Analytics Certified, Digital Marketing, Python</p>
-              <p>As a digital marketing and IT professional with 7 years of experience in marketing and 2 years of experience in web development, I bring a unique skill set to the table. With a proven track record in social media management, SEO, content creation, and graphic design using tools like Photoshop and Illustrator, I have successfully helped businesses build their online presence, increase brand awareness, and drive traffic to their websites.</p>
+              <p>Effective and results-driven professional with 8 years of experience in digital marketing and 2 years in Web Development. Certified in Google Data Analytics, with a proven ability to leverage data-driven insights to enhance business strategies. Proficient in Japanese at the JLPT N2 level, bringing strong communication skills and cross-cultural understanding to contribute effectively in a global environment. I have successfully helped businesses build their online presence, increase brand awareness, and drive traffic to their websites..</p>
               <ul class="theme-list">
                 <li class="fg-dark"><b>From:</b> Baguio City, Philippines</li>
                 <li class="fg-dark"><b>Lives In:</b> Tokyo, Japan</li>
