--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -212,7 +212,7 @@
               <li>
                 <div class="title">2015-2017</div>
                 <div class="details">
-                  <h5>IT JUNIOR SEO</h5>
+                  <h5>IT Engineer</h5>
                   <small class="fg-theme">ITECH - PFS</small>
                   <p>Proven software development experience in PHP. Demonstrable knowledge of web technologies including HTML, CSS, Javascript,etc. Good knowledge of relational databases, version control tools and of developing web services. Experience in common third-party APIs (Google, Facebook, Ebay etc). </p>
                 </div>
