--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@ i<!DOCTYPE html>
                   <p>Information Technology (IT) was rapidly expanding and evolving, with new technologies emerging every day. Studying IT was an opportunity to be at the forefront of these technological advancements and gain valuable skills and knowledge that would be highly sought after in the job market.</p>
                 </div>
               </li>
+               <li>
+                <div class="title">2024</div>
+                <div class="details">
+                  <h5>Google Data Analytics Professional Certification</h5>
+                  <small class="fg-theme">Google Careers </small>
+                  <p>Completed Google Data Analytics Professional Certificate, gaining proficiency in Data Analysis · Data Cleaning · Data Visualization · Data-driven Decision Making · R (Programming Language) · SQL · Python (Programming Language)</p>
+                </div>
+              </li>
               
             </ul>
           </div>
